[package]
name = "static-void"
version = "0.1.0"
authors = ["Alexander Vanvik <alexander.vanvik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.71"
js-sys = "0.3.48"
rapier2d = { version = "0.6.1", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3.6"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
]
