[package]
name = "static-void"
version = "0.1.0"
authors = ["Alexander Vanvik <alexander.vanvik@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.71", features = ["serde-serialize"] }
js-sys = "0.3.48"
rapier2d = { version = "0.6.1", features = ["wasm-bindgen"] }
console_error_panic_hook = "0.1.6"
hashbrown = { version = "0.11.2", features = ["nightly"] }
perlin2d = "0.2.6"
instant = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }

[dependencies.web-sys]
version = "0.3.6"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  "console",
]
